# terminal-anim

./: .gitignore  CMakeLists.txt  README.md
include/: terminal-anim.h
src/: box-drawer.c  box-drawing-chars.h  drawer.c  escape-sequences.h  fluxhandler.c  input-handler.c  main.c  platform.h  platform_unix.c  scene.c  scene.h  terminal-anim-internal.h  terminal-handler.c
tests/: test_box.c  test_clear.c  test_events.c  test_fullscreen.c  test_init_teardown.c  test_lines.c  test_max_refresh.c  test_round_shapes.c  test_shapes.c  test_static.c  test_styles.c
